updated html code

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="msg">1USD = 91.78INR</div>
             <button>Get Exchange Rate</button>
         </form>
-
+<div>button</div>
     </div>
 <script src="code.js"></script>
     <script src="app.js"></script>
