--- a/index.html
+++ b/index.html
@@ -6,49 +6,37 @@
     <title>Currency Converter</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-<body>
-
+ </head>
+  <body>
     <div class="container">
-        <h2>Currency Converter</h2>
-
-        <form>
-            <div class="amount">
-                <p>Enter Amount</p>
-                <input value="100" type="text">
+      <h2>Currency Converter</h2>
+      <form>
+        <div class="amount">
+          <p>Enter Amount</p>
+          <input value="1" type="text" />
+        </div>
+        <div class="dropdown">
+          <div class="from">
+            <p>From</p>
+            <div class="select-container">
+              <img src="https://flagsapi.com/US/flat/64.png" />
+              <select name="from"></select>
             </div>
-
-            <div class="dropdown">
-
-                <div class="from">
-                    <p>From</p>
-                    <div class="select-container">
-                        <img src="https://flagsapi.com/US/flat/64.png">
-                        <select name="from">
-                           
-                        </select>
-                    </div>
-                </div>
-
-                <i class="fa-solid fa-arrow-right-arrow-left"></i>
-                <div class="to">
-                    <p>To</p>
-                    <div class="select-container">
-                        <img src="https://flagsapi.com/IN/flat/64.png">
-                        <select name="to">
-                        
-                        </select>
-                    </div>
-                </div>
-
+          </div>
+          <i class="fa-solid fa-arrow-right-arrow-left"></i>
+          <div class="to">
+            <p>To</p>
+            <div class="select-container">
+              <img src="https://flagsapi.com/IN/flat/64.png" />
+              <select name="to"></select>
             </div>
-            <div class="msg">1USD = 91.78INR</div>
-            <button>Get Exchange Rate</button>
-        </form>
-
+          </div>
+        </div>
+        <div class="msg">1USD = 80INR</div>
+        <button>Get Exchange Rate</button>
+      </form>
     </div>
-<script src="code.js"></script>
+    <script src="codes.js"></script>
     <script src="app.js"></script>
-
-</body>
+  </body>
 </html>
